# RAG_Workflow

./: .gitignore  Makefile  README.md  docker-compose.yml  fix_unicode.py  pyproject.toml
backend/: .dockerignore  Dockerfile  requirements.txt
backend/app/: main.py  state.py
backend/app/models/: schemas.py
backend/app/routers/: chunk.py  dashboard.py  embed.py  generate.py  ingest.py  query.py  store.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: ChunkingPanel.jsx  Dashboard.jsx  EmbeddingPanel.jsx  GenerationPanel.jsx  IngestionPanel.jsx  LogPanel.jsx  QueryPanel.jsx  VectorStorePanel.jsx
